# python2510

client/: package.json
client/src/: App.css  App.js  index.js
client/src/components/: Dashboard.js  EditProfile.js  Login.js  Signup.js  TopNavigation.js
server/: .env  main.py  pyproject.toml  requirements.txt
